--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,9 @@ jobs:
         arch: [armv7, aarch64, riscv64, s390x, ppc64le]
 
     env:
-      STUBS_DIR: /esptool/targets/stub_flasher/
+      STUBS_DIR: ./esptool/targets/stub_flasher/
+      EFUSE_DIR: ./espefuse/efuse_defs/
+
     steps:
       - name: Set Swap Space
         uses: pierotofy/set-swap-space@v1.0
@@ -101,8 +103,8 @@ jobs:
             python -m pip install --upgrade pip
             pip install pyinstaller
             pip install --user -e .
-            pyinstaller --distpath ./${{ matrix.arch }} -F --icon=ci/espressif.ico --add-data=".${{ env.STUBS_DIR }}*.json:${{ env.STUBS_DIR }}" esptool.py
-            pyinstaller --distpath ./${{ matrix.arch }} -F --icon=ci/espressif.ico espefuse.py
+            pyinstaller --distpath ./${{ matrix.arch }} -F --icon=ci/espressif.ico --add-data="${{ env.STUBS_DIR }}*.json:${{ env.STUBS_DIR }}" esptool.py
+            pyinstaller --distpath ./${{ matrix.arch }} -F --icon=ci/espressif.ico --add-data="${{ env.EFUSE_DIR }}*.yaml:${{ env.EFUSE_DIR }}" espefuse.py
             pyinstaller --distpath ./${{ matrix.arch }} -F --icon=ci/espressif.ico espsecure.py
             pyinstaller --distpath ./${{ matrix.arch }} -F --icon=ci/espressif.ico esp_rfc2217_server.py
             ./${{ matrix.arch }}/esptool -h
