Also build the host executables. (#3)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,16 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # Lesser General Public License for more details.
 
-name: Build esptool
+name: Build esptool cross
 
 on:
   push:
-  pull_request:
   release:
     types: [published]
 
 jobs:
-  build-esptool-binaries:
-    name: Build esptool binaries for ${{ matrix.arch }}
+  build-cross-esptool-binaries:
+    name: esptool - ${{ matrix.arch }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -120,15 +119,10 @@ jobs:
           find ./${{ matrix.arch }}
           mv LICENSE README.md ./${{ matrix.arch }}
 
-      - name: Set archive variables (release)
-        if: github.event_name == 'release'
-        run: |
-          echo "ARCHIVE_NAME=esptool-${{ github.event.release.tag_name }}-linux-${{ matrix.arch }}" >> $GITHUB_ENV
-
       - name: Set archive variables
-        if: github.event_name != 'release'
         run: |
-          echo "ARCHIVE_NAME=esptool-${{ matrix.arch }}" >> $GITHUB_ENV
+          export ARCHIVE_NAME=esptool-linux-${{ matrix.arch }}
+          echo "ARCHIVE_NAME=$ARCHIVE_NAME" >> $GITHUB_ENV
 
       - name: Create archive
         run: |
