--- a/.github/workflows/build_esptool.yml
+++ b/.github/workflows/build_esptool.yml
@@ -10,7 +10,7 @@ on:
         type: boolean
         default: false
       sign-windows:
-        description: "Sign macOS executables"
+        description: "Sign Windows executables"
         required: false
         type: boolean
         default: false
