Use env.MACOS_TEAM_ID for signing.

--- a/.github/workflows/build_esptool.yml
+++ b/.github/workflows/build_esptool.yml
@@ -96,7 +96,7 @@ jobs:
           certificate-password: ${{ secrets.MACOS_CERTIFICATE_PWD }}
           username: ${{ secrets.AC_USERNAME }}
           password: ${{ secrets.AC_PASSWORD }}
-          apple-team-id: 33DS2ZRDST
+          apple-team-id: ${{ vars.MACOS_TEAM_ID }}
           app-path: |
             ./${{ env.DISTPATH }}/esptool
             ./${{ env.DISTPATH }}/espefuse
